# StockSearch_v0.3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.db-local.yml  docker-compose.yml  pyproject.toml
.codex/: AGENTS.md  config.toml
.github/workflows/: security.yml
app/: alembic.ini
app/alembic/: env.py
app/alembic/versions/: 0001_init.py  0002_fund_intel_theme_rag.py
app/src/jp_stock_swing_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/src/jpswing/: __init__.py  config.py  fund_intel_orchestrator.py  main.py  pipeline.py
app/src/jpswing/db/: __init__.py  locks.py  models.py  session.py
app/src/jpswing/enrich/: __init__.py  events.py  market_context.py  sq.py
app/src/jpswing/features/: indicators.py
app/src/jpswing/fund/: __init__.py  service.py
app/src/jpswing/ingest/: __init__.py  calendar.py  edinet_client.py  fx_client.py  jquants_client.py  (+2 more)
app/tests/: test_calendar.py  test_discord_router.py  test_edinet_client.py  test_edinet_code_mapping.py  test_edinet_xbrl.py  test_fund_auto_recover.py  test_fund_carry_forward.py  test_fund_scoring_derivation.py  test_fund_service.py  test_indicators.py  test_intel_auto_recover.py  test_intel_budget_idempotency.py  test_intel_llm_client.py  test_intel_priority.py  test_intel_schema_validation.py  test_llm_schema.py  test_notify_formatter.py  test_scoring.py  test_tag_policy_mapping.py  test_theme_auto_recover.py  test_theme_service.py  test_transformers.py
config/: app.yaml  fund.yaml  intel.yaml  notify.yaml  rules.yaml  tag_policy.yaml  theme.yaml
(+31 files in other folders)
