[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jp-stock-swing-agent"
version = "0.1.0"
description = "Daily JP stock swing screening and Discord notification agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.32",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.7.3",
  "pytest>=8.3.2",
  "pytest-mock>=3.14.0",
]

[tool.setuptools]
package-dir = {"" = "app/src"}

[tool.setuptools.packages.find]
where = ["app/src"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["app/src"]
